@@ -1,3 +1,8 @@
+2008-07-17  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/36824
+	* gfortran.dg/array_4.f90: New.
+
 2008-07-17  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR rtl-optimization/36753
